# NLP-MachineLearning-project-EMOTION-DETECTOR

./: README.md  pyproject.toml  requirements.txt
App/: main.py
Models/: linearsvc_model.joblib  logistic_regression_model.joblib  tfidf_vectorizer.joblib  xgboost_model.joblib
NoteBooks/: ProjectFile.ipynb
src/: __init__.py  config.py  file_processor.py  model_loader.py  predictor.py  preprocess.py  visualizer.py
