[project]
name = "emotiondetector"
version = "0.1.0"
description = "Emotion detection app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.56.0",
    "joblib>=1.3.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "nltk>=3.8.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0"
]